--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-sanity": "^9.8.8",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
